--- a/CSM.Client/package.json
+++ b/CSM.Client/package.json
@@ -36,6 +36,7 @@
     "@ngrx/effects": "^5.1.0",
     "@ngrx/store": "^5.1.0",
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "^5.5.0",
