--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>CSM.Repositories</AssemblyName>
+    <RootNamespace>CSM.Repositories</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
